fix the header section background issue and added a circular div behind the failure section image

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,16 +13,15 @@
 
 /* main style */
 header{
+    background-image: url("../images/banner/banner1.png");
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .banner{
     position: relative;
-}
-.banner img{
-    width: 100%;
-    max-width: 1600px;
-    height: 700px;
-    max-height: 808px;
-    vertical-align: middle;
 }
 .banner .banner-info{
     max-width: 525px;
@@ -71,8 +70,28 @@ header{
     align-items: center;
     gap: 87px;
 }
+#failures .failures-container .fail-img{
+    position: relative;
+    /* overflow: hidden; */
+}
 #failures .failures-container .fail-img img{
-    width: 550px;
+    width: 450px;
+    position: relative;
+    z-index: 1;
+}
+#failures .failures-container .fail-img .circle{
+    width: 500px;
+    height: 500px;
+    background-color: #F15B2233;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    position: absolute;
+    top: 200px;
+    right: 1px;
+    z-index: 0;
 }
 #failures .failures-container .fail-des{
     max-width: 416px;
